# swagger-routes-validator

./: Makefile  Pipfile  readme.md  setup.cfg  setup.py
.github/workflows/: build.yml
docker/: Dockerfile
src/validator/: __init__.py  __main__.py  helpers.py
tests/: test_helpers.py
tests/data/: config.yml  routes1.yml  routes2.yml  swagger.yml
